--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,11 @@
     max-width: 200px;
     margin: 0 auto;
 }
+
+button {
+    width: 100%;
+}
+
+.current-action, h1, h3 {
+    text-align: center;
+}
